k3s_manifests/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: todo-app
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5000
