k3s_manifests/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
