k3s_manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: todo-app
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 3000
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
